# Calendar-Todoist-Sync

./: README.md  main.py  pyproject.toml
modules/: tasks.py
